--- a/css/style.css
+++ b/css/style.css
@@ -1,215 +1,181 @@
-.header-dark {
-    background:url(../../assets/img/mountain_bg.jpg) #444;
-    background-size:cover;
-    padding-bottom:588px;
-  }
-  /*
-  @media (min-width:768px) {
-    .header-dark {
-      padding-bottom:120px;
-    }
-  }
-  */
-  .header-dark .navbar {
-    background:transparent;
-    padding-top:0;
-    padding-bottom:0;
-    color:#fff;
-    border-radius:0;
-    box-shadow:none;
-    border:none;
-  }
-  
-  @media (min-width:768px) {
-    .header-dark .navbar {
-      padding-top:.75rem;
-      padding-bottom:.75rem;
-    }
-  }
-  
-  .header-dark .navbar .navbar-brand {
-    font-weight:bold;
-    color:inherit;
-  }
-  
-  .header-dark .navbar .navbar-brand:hover {
-    color:#f0f0f0;
-  }
-  
-  .header-dark .navbar .navbar-collapse span {
-    margin-top:5px;
-  }
-  
-  .header-dark .navbar .navbar-collapse span .login {
-    color:#d9d9d9;
-    margin-right:.5rem;
-    text-decoration:none;
-  }
-  
-  .header-dark .navbar .navbar-collapse span .login:hover {
-    color:#fff;
-  }
-  
-  .header-dark .navbar .navbar-toggler {
-    border-color:#747474;
-  }
-  
-  .header-dark .navbar .navbar-toggler:hover, .header-dark .navbar-toggler:focus {
-    background:none;
-  }
-  
-  .header-dark .navbar .navbar-toggler {
-    color:#eee;
-  }
-  
-  .header-dark .navbar .navbar-collapse, .header-dark .navbar .form-inline {
-    border-color:#636363;
-  }
-  
-  @media (min-width: 992px) {
-    .header-dark .navbar.navbar .navbar-nav .nav-link {
-      padding-left:1.2rem;
-      padding-right:1.2rem;
-    }
-  }
-  
-  .header-dark .navbar.navbar-dark .navbar-nav .nav-link {
-    color:#d9d9d9;
-  }
-  
-  .header-dark .navbar.navbar-dark .navbar-nav .nav-link:focus, .header-dark .navbar.navbar-dark .navbar-nav .nav-link:hover {
-    color:#fcfeff !important;
-    background-color:transparent;
-  }
-  
-  .header-dark .navbar .navbar-nav > li > .dropdown-menu {
-    margin-top:-5px;
-    box-shadow:0 4px 8px rgba(0,0,0,.1);
-    background-color:#fff;
-    border-radius:2px;
-  }
-  
-  .header-dark .navbar .dropdown-menu .dropdown-item:focus, .header-dark .navbar .dropdown-menu .dropdown-item {
-    line-height:2;
-    font-size:14px;
-    color:#37434d;
-  }
-  
-  .header-dark .navbar .dropdown-menu .dropdown-item:focus, .header-dark .navbar .dropdown-menu .drodown-item:hover {
-    background:#ebeff1;
-  }
-  
-  .header-dark .navbar .action-button, .header-dark .navbar .action-button:active {
-    background:#208f8f;
-    border-radius:20px;
-    font-size:inherit;
-    color:#fff;
-    box-shadow:none;
-    border:none;
-    text-shadow:none;
-    padding:.5rem .8rem;
-    transition:background-color 0.25s;
-  }
-  
-  .header-dark .navbar .action-button:hover {
-    background:#269d9d;
-  }
-  
-  .header-dark .navbar .form-inline label {
-    color:#ccc;
-  }
-  
-  .header-dark .navbar .form-inline .search-field {
-    display:inline-block;
-    width:80%;
-    background:none;
-    border:none;
-    border-bottom:1px solid transparent;
-    border-radius:0;
-    color:#ccc;
-    box-shadow:none;
-    color:inherit;
-    transition:border-bottom-color 0.3s;
-  }
-  
-  .header-dark .navbar .form-inline .search-field:focus {
-    border-bottom:1px solid #ccc;
-  }
-  
-  .header-dark .hero {
-    margin-top:60px;
-  }
-  
-  @media (min-width:768px) {
-    .header-dark .hero {
-      margin-top:20px;
-    }
-  }
-  
-  .header-dark .hero h1 {
-    color:#fff;
-    font-family:'Bitter', serif;
-    font-size:40px;
-    margin-top:20px;
-    margin-bottom:80px;
-  }
-  
-  @media (min-width:768px) {
-    .header-dark .hero h1 {
-      margin-bottom:50px;
-      line-height:1.5;
-    }
-  }
-  
-  .header-dark .hero .embed-responsive iframe {
-    background-color:#666;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  #cardList {
-    height: 100px;
-    width: 800px;
-    position: relative;
-    border: 2px solid black;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  
-  .card {
-    display: inline-block;
-    background-color: red;
-    text-align: center;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    width: 100px;
-    height: 100px;
-  }
-  
-  .card > img {
-    width: 100px;
-    height: 100px;
-  }
-  
-  .arrow-down {
-    margin-left: 50%;
-    width: 2px; 
-    height: 100%; 
-    background-color: gold;
-    position: absolute;
-    z-index: 999;
-  }
-  #dialog-msg > img {
-    width: 150px;
-    height: 150px;
-  }
-  #dialog-msg {
-    text-align: center;
-  }
+/*LOGIN*/
 
-  .col {
-    margin: auto 0;
+html {
+  height: 100%;
+}
+
+body {
+  margin:0;
+  padding:0;
+  font-family: sans-serif;
+  background: linear-gradient(#141e30, #243b55);
+}
+
+.login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(0,0,0,.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  border-radius: 10px;
+}
+
+.login-box h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+}
+
+.login-box .user-box {
+  position: relative;
+}
+
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+.login-box .user-box label {
+  position: absolute;
+  top:0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: .5s;
+}
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: #03e9f4;
+  font-size: 12px;
+}
+
+.login-box form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #03e9f4;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 40px;
+  letter-spacing: 4px
+}
+
+.login-box a:hover {
+  background: #03e9f4;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #03e9f4,
+              0 0 25px #03e9f4,
+              0 0 50px #03e9f4,
+              0 0 100px #03e9f4;
+}
+
+.login-box a span {
+  position: absolute;
+  display: flex;
+}
+
+.login-box a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+  animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
   }
-  
+  50%,100% {
+    left: 100%;
+  }
+}
+
+.login-box a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #03e9f4);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: .25s
+}
+
+@keyframes btn-anim2 {
+  0% {
+    top: -100%;
+  }
+  50%,100% {
+    top: 100%;
+  }
+}
+
+.login-box a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #03e9f4);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: .5s
+}
+
+@keyframes btn-anim3 {
+  0% {
+    right: -100%;
+  }
+  50%,100% {
+    right: 100%;
+  }
+}
+
+.login-box a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #03e9f4);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: .75s
+}
+
+@keyframes btn-anim4 {
+  0% {
+    bottom: -100%;
+  }
+  50%,100% {
+    bottom: 100%;
+  }
+}
+
+.input-submit{
+  background-color: black;
+  border-radius: 10px;
+  color: white;
+  text-transform: uppercase;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
